bee-common-derive/tests/packable/no_ty_enum.stderr
error: Enums that derive `Packable` require a `#[packable(ty = ...)]` attribute.
 --> $DIR/no_ty_enum.rs:9:10
  |
9 | pub enum OptI32 {
  |          ^^^^^^
